# wxSVGHandler

./: CMakeLists.txt  LICENSE  README  THIRD_PARTY  conanfile.txt
examples/: Viewer.cpp
src/: SvgRenderer.h  SvgRendererNano.cpp  imagsvg.cpp  imagsvg.h
tests/: Tests.cpp  catch.hpp
